--- a/system2/src/LecCourses.form
+++ b/system2/src/LecCourses.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="546" height="400"/>
+      <xy x="20" y="20" width="580" height="400"/>
     </constraints>
     <properties>
       <font size="72" style="1"/>
@@ -26,7 +26,7 @@
               <grid row="0" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font size="48" style="1"/>
+              <font size="24" style="1"/>
               <text value="Course"/>
             </properties>
           </component>
@@ -35,6 +35,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font size="14"/>
               <text value="Select Course"/>
             </properties>
           </component>
@@ -44,6 +45,7 @@
             </constraints>
             <properties>
               <background color="-13922170"/>
+              <font size="14"/>
               <model>
                 <item value="ICT2113"/>
                 <item value="ICT2122"/>
@@ -58,6 +60,7 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font size="14"/>
               <text value="Enter material title"/>
             </properties>
           </component>
@@ -66,6 +69,7 @@
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font size="14"/>
               <text value="Enter matireal Description"/>
             </properties>
           </component>
@@ -80,15 +84,9 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
-          </component>
-          <component id="3d47" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
-            <constraints>
-              <grid row="3" column="1" row-span="1" col-span="4" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
-              </grid>
-            </constraints>
-            <properties/>
+            <properties>
+              <font size="14"/>
+            </properties>
           </component>
           <component id="b70ea" class="javax.swing.JButton" binding="uploadButton" default-binding="true">
             <constraints>
@@ -96,6 +94,7 @@
             </constraints>
             <properties>
               <background color="-13922170"/>
+              <font size="14"/>
               <text value="Upload"/>
             </properties>
           </component>
@@ -105,6 +104,7 @@
             </constraints>
             <properties>
               <background color="-13922170"/>
+              <font size="14"/>
               <text value="Select file"/>
             </properties>
           </component>
@@ -114,6 +114,7 @@
             </constraints>
             <properties>
               <background color="-13922170"/>
+              <font size="14"/>
               <text value="DELETE"/>
             </properties>
           </component>
@@ -128,6 +129,7 @@
             </constraints>
             <properties>
               <background color="-13922170"/>
+              <font size="14"/>
               <text value="Logout"/>
             </properties>
           </component>
@@ -137,7 +139,18 @@
             </constraints>
             <properties>
               <background color="-13922170"/>
+              <font size="14"/>
               <text value="Back"/>
+            </properties>
+          </component>
+          <component id="3d47" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
+            <constraints>
+              <grid row="3" column="1" row-span="1" col-span="4" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="50"/>
+              </grid>
+            </constraints>
+            <properties>
+              <font size="14"/>
             </properties>
           </component>
         </children>
